--- a/example/ios/example/Info.plist
+++ b/example/ios/example/Info.plist
@@ -53,5 +53,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+  <key>NSMicrophoneUsageDescription</key>
+  <string>For voice call</string>
 </dict>
 </plist>
