--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         compileSdkVersion = 30
         targetSdkVersion = 30
         ndkVersion = "20.1.5948944"
+        firebaseMessagingVersion = "20.1.0"
     }
     repositories {
         google()
@@ -16,6 +17,7 @@ buildscript {
         classpath("com.android.tools.build:gradle:4.2.1")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:4.3.10'
     }
 }
 
@@ -34,5 +36,10 @@ allprojects {
 
         google()
         maven { url 'https://www.jitpack.io' }
+        maven { url "https://repo.sendbird.com/public/maven" }
+        maven {
+          url "$rootDir/../node_modules/@notifee/react-native/android/libs"
+        }
+
     }
 }
