--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
   },
   "devDependencies": {
     "react": "^16.9.0",
-    "react-native": "^0.61.5"
+    "react-native": "^0.61.5",
+    "@types/react": "^16.9.0",
+    "@types/react-native": "^0.61.5",
+    "typescript": "~4.3.5"
   }
 }
